--- a/TextClassify.cabal
+++ b/TextClassify.cabal
@@ -15,8 +15,9 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib
-                     , Classify
+  exposed-modules:     Classify
+                     , ClassifyIO
+                     , TfIdf
   build-depends:       base >= 4.7 && < 5
                      , protolude
                      , text
