--- a/TextClassify.cabal
+++ b/TextClassify.cabal
@@ -48,6 +48,8 @@ test-suite TextClassify-test
                      , TextClassify
                      , protolude
                      , text
+                     , hspec
+                     , QuickCheck
                      , containers
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
