--- a/TextClassify.cabal
+++ b/TextClassify.cabal
@@ -18,6 +18,7 @@ library
   exposed-modules:     Classify
                      , ClassifyIO
                      , TfIdf
+                     , Args
   build-depends:       base >= 4.7 && < 5
                      , protolude
                      , text
@@ -25,6 +26,7 @@ library
                      , regex-compat
                      , directory
                      , cassava
+                     , optparse-generic
   default-language:    Haskell2010
 
 executable TextClassify-exe
@@ -38,7 +40,6 @@ executable TextClassify-exe
                      , containers
                      , regex-compat
                      , directory
-                     , optparse-generic
   default-language:    Haskell2010
 
 test-suite TextClassify-test
