--- a/TextClassify.cabal
+++ b/TextClassify.cabal
@@ -24,10 +24,10 @@ library
                      , protolude
                      , text
                      , containers
-                     , regex-compat
                      , directory
                      , cassava
                      , optparse-generic
+                     , process
   default-language:    Haskell2010
 
 executable TextClassify-exe
@@ -39,7 +39,6 @@ executable TextClassify-exe
                      , protolude
                      , text
                      , containers
-                     , regex-compat
                      , directory
   default-language:    Haskell2010
 
