--- a/TextClassify.cabal
+++ b/TextClassify.cabal
@@ -18,6 +18,7 @@ library
   exposed-modules:     Classify
                      , ClassifyIO
                      , ClassifyLines
+                     , ClassifyCsv
                      , TfIdf
                      , Args
   build-depends:       base >= 4.7 && < 5
@@ -28,6 +29,8 @@ library
                      , cassava
                      , optparse-generic
                      , process
+                     , bytestring
+                     , vector
   default-language:    Haskell2010
 
 executable TextClassify-exe
