--- a/TextClassify.cabal
+++ b/TextClassify.cabal
@@ -33,7 +33,7 @@ library
                      , vector
   default-language:    Haskell2010
 
-executable TextClassify-exe
+executable txtcls
   hs-source-dirs:      app
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
