--- a/TextClassify.cabal
+++ b/TextClassify.cabal
@@ -43,6 +43,7 @@ executable txtcls
                      , text
                      , containers
                      , directory
+                     , monad-loops
   default-language:    Haskell2010
 
 test-suite TextClassify-test
